--- a/index.html
+++ b/index.html
@@ -149,14 +149,15 @@
             <div class="right-col">
                 <div id="jewelry" class="slider_element" title="Jewelry">
                     <div class="jewelry-title">
-                        <div class="main-rectangle"></div>
+                        <div class="main-rectangle">
+                            <span class="jewelry-name">JEWELRY</span>
+                        </div>
                         <div class="rectangle">
                             <div class="ellipse">
                                 <i class="fa-solid fa-angle-right"></i>
                             </div>
                         </div>
                         <div class="triangle"></div>
-                        <span class="jewelry-name">JEWELRY</span>
                     </div>
                 </div>
             </div>
