--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
             </div>
         </div>
         <div class="new-products-images">
-            <div class="new-products-image-1" title="New product 1"></div>
-            <div class="new-products-image-2" title="New product 2">
+            <div class="new-products-image-1"></div>
+            <div class="new-products-image-2">
                 <div class="buttons-baby-shop" title="">
                     <span class="buttons-text" title="Baby shop">
                         Baby Shop
@@ -202,7 +202,7 @@
                     </div>
                 </div>
             </div>
-            <div class="new-products-image-3" title="New product 3"></div>
+            <div class="new-products-image-3"></div>
         </div>
     </div>
     <div class="featured-products">
