--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="note red-note">20% OFF</div>
+                <span class="note red-note">20% OFF</span>
             </div>
             <div class="featured-products-image red" title="Featured product 2">
                 <img src="images/woman2.png" alt="image-2">
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="note blue-note">New</div>
+                <span class="note blue-note">New</span>
             </div>
             <div class="featured-products-image red" title="Featured product 4">
                 <img src="images/woman4.png" alt="image-4">
