--- a/index.html
+++ b/index.html
@@ -170,7 +170,12 @@
                 </div>
             </div>
         </div>
-        <div class="new-products-images">
+        <script type="text/javascript" src="js/newProdSlider.js"></script>
+        <script>
+            lazyAddSlider('new-products-slider', '1170px', 3, '200px', '370px',
+            ["images/new_prod1.png" ,"images/new_prod2.png","images/new_prod3.png"], "new-products");
+        </script>
+        <!--<div class="new-products-images">
             <div class="new-products-image-1"></div>
             <div class="new-products-image-2">
                 <div class="buttons-baby-shop" title="">
@@ -190,7 +195,7 @@
                     </div>
                 </div>
             </div>
-            <div class="new-products-image-3"></div>
+            <div class="new-products-image-3"></div>-->
         </div>
     </div>
     <div class="featured-products">
