--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     
     <!--Часть Тани начало-->
     
-    <div class="new-products">
+    <div class="new-products" id="new-products">
         <div class="products-header">
             <div class="line"></div>
             <span class="products-header-text">
