--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                     </div>
                 </div>
             </div>
-            <div class="new-products-image-3"></div>-->
-        </div>
+            <div class="new-products-image-3"></div>
+        </div>-->
     </div>
     <div class="featured-products">
         <div class="products-header">
