--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 New Products
             </span>
             <div class="products-header-arrows">
-                <div class="new-products-header-arrow" title="Previous product">
+                <div class="new-products-header-arrow" title="Previous product" id="new_products_header_left_arrow">
                     <i class="fa-solid fa-angle-left"></i>
                 </div>
-                <div class="new-products-header-arrow" title="Next product">
+                <div class="new-products-header-arrow" title="Next product" id="new_products_header_right_arrow">
                     <i class="fa-solid fa-angle-right"></i>
                 </div>
             </div>
