--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
             </li>
         </ul>
     </div>
+<script src="scripts/FeaturedProductsScript.js"></script>
    
     <!--Часть Тани конец-->
 
