--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <script type="text/javascript" src="js/newProdSlider.js"></script>
         <script>
             lazyAddSlider('new-products-slider', '1170px', 3, '200px', '370px',
-            ["images/new_prod1.png" ,"images/new_prod2.png","images/new_prod3.png"], "new-products");
+                ["images/new_prod1.png" ,"images/new_prod2.png","images/new_prod3.png"], "new-products");
         </script>
     </div>
         <!--<div class="new-products-images">
@@ -449,8 +449,8 @@
                 </div>
             </li>
         </ul>
+        <script type="text/javascript" src="js/FeaturedProductsScript.js"></script>
     </div>
-<script src="js/FeaturedProductsScript.js"></script>
    
     <!--Часть Тани конец-->
 
