--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     </div>
                     <div class="lower">
                         <ul class="second_menu">
-                            <li><a href="#" title="Register">Register</a></li>
-                            <li><a href="#" title="Sign In">Sign In</a></li>
+                            <li><a id="account" href="#" title="Register">Register</a></li>
+                            <li><a id="log_out" href="#" title="Sign In">Sign In</a></li>
                             <li class = "bar-img"><a href="#" title="Go to whislost">
                                 Whislost <i class="fa-solid fa-gift fa-lg"></i>
                             </a></li>
@@ -454,9 +454,10 @@
         <span class="size_text">Checkout</span>
     </a>
 </div>
-<div class="register_option">
-    <a href="#" class="register_button" title="Register Now">Register Now</a>
+<div id="register" class="register_option">
+    <button  onclick="register()" class="register_button" title="Register Now">Register Now</button>
 </div>
+    <script type="text/javascript" src="js/script_max.js"></script>
     <!--Часть Максима конец-->
 
 <!-- начало второй части Ани-->
