--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 <div id="register" class="register_option">
     <button  onclick="register()" class="register_button" title="Register Now">Register Now</button>
 </div>
-    <script type="text/javascript" src="js/script_max.js"></script>
+    <script type="text/javascript" src="js/register_script.js"></script>
     <!--Часть Максима конец-->
 
 <!-- начало второй части Ани-->
